# MLOps-homework1

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  test_app.py
