[project]
name = "mlops-homework1"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi>=0.118.1",
    "joblib>=1.5.2",
    "pydantic>=2.12.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=3.5.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
